# Tools

./: .gitignore  CMakeLists.txt  CMake构建配置.bat  CMake构建项目.bat  CMake配置构建.bat  LICENSE  README.md  删除build文件夹.bat  生成CMakebuild.bat  看我.txt
Setup/: Setup.vdproj
Setup/Debug/: Tools 安装与卸载.msi
Setup/Release/: Tools 安装与卸载.tmp
include/: Setting.h  framework.h  resource.h
include/Tool/: CharHandleOfConfigFile.h  CommonTools.h  Control.h  Counts.h  Edit.h  Font.h  Hotkey.h  Key.h  Location.h  Log.h  Message.h  SaveFile.h  Shell.h  StringConversion.h  Timers.h  ToolsConfigFile.h  Tools_Tool.h  WindowHosting.h  WindowsHosting.h  pch.h
include/libTypical/: Tool.h
include/libTypical/Tool/: CommonTools.h  ConfigFileTextManage.h  FileManage.h  Json_Typical.h  Languages.h  Log.h  Tchar_Typical.h  WindowHost.h  pch.h
include/libTypical_Tool/: CharHandleOfConfigFile.h  CommonTools.h  ConfigFileTextManage.h  Hotkey.h  Log.h  Message.h  Shell.h  Timers.h  ToolsConfigFile.h  WindowHosting.h  pch.h
lib/Tool/: CMakeLists.txt
lib/libTypical/Release/: libTypical.lib
lib/libTypical/Release_Win/: libTypical.lib
lib/libTypical_Tool/Debug_Win/: libTypical_Tool.lib
lib/libTypical_Tool/Release/: libTypical_Tool.lib
lib/libTypical_Tool/Release_Win/: libTypical_Tool.lib
src/: Setting.cpp  Tools.aps  Tools.rc  main.cpp
src/Tool/: CharHandleOfConfigFile.cpp  CommonTools.cpp  Edit.cpp  Font.cpp  HotKey.cpp  Location.cpp  Log.cpp  Message.cpp  SaveFile.cpp  Shell.cpp  StringConversion.cpp  Timers.cpp  ToolsConfigFile.cpp  WindowsHosting.cpp  dllmain.cpp  key.cpp
